# hello-rust-actix-web

./: .gitignore  Cargo.toml  README.md  db.sql  docker-compose.yaml  test.http
src/: main.rs
src/model/: mod.rs
src/schema/: mod.rs
src/services/: mod.rs
src/services/counter/: mod.rs
src/services/mysql/: mod.rs
src/services/post/: mod.rs
src/services/redis/: mod.rs
src/services/state/: mod.rs
src/services/static_files/: mod.rs
src/services/user/: mod.rs
src/services/users/: mod.rs
src/services/ws/: mod.rs
static/: index.html
