[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-static-files = "4.0.1"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0"
actix-redis = "0.12.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
sqlx = { version = "0.6.3", features = ["mysql", "runtime-actix-rustls", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "*", features = ["serde"] }
